# docker-flask-multistage

./: .dockerignore  .editorconfig  .env.dist  .isort.cfg  .pre-commit-config.yaml  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  gunicorn.py  pyproject.toml  requirements.txt
.github/workflows/: snyk-container-analysis.yml
docker/: Dockerfile
docker/nginx/: flask.conf
features/: __init__.py  acceptance.feature  check_da_sound.feature
features/steps/: acceptance.py
