[tool.poetry]
name = "docker-flask-multistage"
version = "0.1.0"
description = ""
authors = ["Andrey O <10812297+andreyors@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Flask = "^2.1.1"
envparse = "^0.2.0"
requests = "^2.27.1"
pre-commit = "^2.18.1"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
behave-plain-color-formatter = "^0.0.2"
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.behave]
stderr_capture=0
stdout_capture=0

[tool.behave.formatters]
plain="behave_plain_color_formatter:PlainColorFormatter"