[tool.poetry]
name = "docker-flask-multistage"
version = "0.1.0"
description = ""
authors = ["Andrey O <10812297+andreyors@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
Flask = "^2.2.3"
envparse = "^0.2.0"
requests = "^2.28.2"
virtualenv = "^20.19.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
pre-commit = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.behave]
stderr_capture=0
stdout_capture=0

[tool.isort]
known_third_party=["aloe", "behave", "envparse", "flask", "requests"]
